# defugger

./: .gitignore  LICENSE  README.md  catfk.cabal  defugger.cabal  stack.yaml
app/: Main.hs
src/: Commands.hs  Compiler.hs  Controller.hs  Loader.hs  Parser.hs  Scratch.hs  StartUp.hs  Types.hs  View.hs
src/Controller/: CommandBindings.hs  Commands.hs  KeyBindings.hs  Loader.hs  Router.hs  Settings.hs
src/Model/: Compiler.hs  CoreIO.hs  Debugger.hs  Interpreter.hs  Parser.hs  Types.hs  Utilities.hs
src/Model/Debugger/: Debugger.hs  Edit.hs  Execute.hs  Query.hs  State.hs  Widgets.hs
src/View/: Core.hs  Help.hs  View.hs
tests/: BFDebuggerTests.hs  BFParserTests.hs  BFProgramTests.hs  UtilitiesTest.hs
tests/ControllerTest/: CommandBindingsTest.hs  MockRouter.hs  Spec.hs
tests/Debugger/: BracketTests.hs  CommandTests.hs  ExecuteTests.hs  Spec.hs  TestUtilities.hs
tests/General/: InterpreterTests.hs  ParserTests.hs  Spec.hs
tests/ModelTest/: InterpreterTests.hs  ParserTests.hs  Spec.hs
tests/ModelTest/DebuggerTest/: BracketTests.hs  ExecuteTests.hs  Spec.hs  StateTests.hs
tests/files/: BreakHelloWorld.bf  BreakWhileHelloWorld.bf  HelloWorld.bf  TestSave101.defug  TestSave102.defug  TestSave103.defug  TestSave104.defug  TestSave105.defug  TestSave106.defug  TestSaveDefaultPath.defug  WriteHelloWorld.bf
