name:                   catfk
version:                0.1.0.0
homepage:               https://github.com/MWRuszczycky/catfk#readme
license:                BSD3
license-file:           LICENSE
author:                 Mark W. Ruszczycky
maintainer:             mwruszczycky@gmail.com
copyright:              2019 Mark W. Ruszczycky
build-type:             Simple
cabal-version:          >=1.10
extra-source-files:     README.md

executable catfk
  hs-source-dirs:       app
  main-is:              Main.hs
  default-language:     Haskell2010
  ghc-options:          -O2 -threaded -W
  build-depends:        base >= 4.7 && < 5
                      , bytestring
                      , text
                      , catfk-internal

library catfk-internal
  exposed-modules:      Controller
                      , Model.Compiler
                      , Model.Parser
                      , Model.Types
  hs-source-dirs:       src
  ghc-options:          -O2 -W
  build-depends:        base >=4.7 && <5
                      , bytestring
                      , directory
                      , mtl
                      , text

test-suite bfparser-tests
  type:                 exitcode-stdio-1.0
  main-is:              BFParserTests.hs
  hs-source-dirs:       tests
  build-depends:        base >=4.7 && <5
                      , catfk-internal
                      , hspec
                      , text
  default-language:     Haskell2010

test-suite bfprogram-tests
  type:                 exitcode-stdio-1.0
  main-is:              BFProgramTests.hs
  hs-source-dirs:       tests
  build-depends:        base >=4.7 && <5
                      , bytestring
                      , catfk-internal
                      , hspec
                      , text
  default-language:     Haskell2010
