name:                   defugger
version:                0.1.0.0
homepage:               https://github.com/MWRuszczycky/defugger#readme
license:                BSD3
license-file:           LICENSE
author:                 Mark W. Ruszczycky
maintainer:             mwruszczycky@gmail.com
copyright:              2019 Mark W. Ruszczycky
build-type:             Simple
cabal-version:          >=1.10
extra-source-files:     README.md

executable defugger
  hs-source-dirs:       app
  main-is:              Main.hs
  default-language:     Haskell2010
  ghc-options:          -O2 -threaded -W
  build-depends:        base >= 4.7 && < 5
                      , mtl
                      , defugger-internal

library defugger-internal
  exposed-modules:      Controller
                      , Loader
                      , StartUp
                      , View
                      , Model.Compiler
                      , Model.CoreIO
                      , Model.Parser
                      , Model.Types
  hs-source-dirs:       src
  ghc-options:          -O2 -W
  build-depends:        base >=4.7 && <5
                      , brick
                      , bytestring
                      , mtl
                      , text
                      , unix
                      , vector
                      , vty

test-suite bfparser-tests
  type:                 exitcode-stdio-1.0
  main-is:              BFParserTests.hs
  hs-source-dirs:       tests
  build-depends:        base >=4.7 && <5
                      , defugger-internal
                      , hspec
                      , text
  default-language:     Haskell2010

test-suite bfprogram-tests
  type:                 exitcode-stdio-1.0
  main-is:              BFProgramTests.hs
  hs-source-dirs:       tests
  build-depends:        base >=4.7 && <5
                      , bytestring
                      , defugger-internal
                      , hspec
                      , mtl
                      , text
  default-language:     Haskell2010
