name:                   defugger
version:                0.1.0.0
homepage:               https://github.com/MWRuszczycky/defugger#readme
license:                BSD3
license-file:           LICENSE
author:                 Mark W. Ruszczycky
maintainer:             mwruszczycky@gmail.com
copyright:              2019 Mark W. Ruszczycky
build-type:             Simple
cabal-version:          >=1.10
extra-source-files:     README.md

executable defugger
  hs-source-dirs:       app
  main-is:              Main.hs
  default-language:     Haskell2010
  ghc-options:          -O2 -threaded -W
  build-depends:        base >= 4.7 && < 5
                      , mtl
                      , defugger-internal

library defugger-internal
  exposed-modules:      Controller.Commands
                      , Controller.Loader
                      , Controller.Router
                      , Model.Debugger.Debugger
                      , Model.Debugger.Edit
                      , Model.Debugger.Execute
                      , Model.Debugger.Query
                      , Model.Debugger.Widgets
                      , Model.CoreIO
                      , Model.Interpreter
                      , Model.Parser
                      , Model.Types
                      , Model.Utilities
                      , StartUp
                      , View.View
                      , View.Core
  hs-source-dirs:       src
  ghc-options:          -O2 -W
  build-depends:        base >=4.7 && <5
                      , async
                      , brick
                      , bytestring
                      , containers
                      , data-default
                      , mtl
                      , text
                      , unix
                      , vector
                      , vty

test-suite general-tests
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  hs-source-dirs:       tests/General
  default-language:     Haskell2010
  ghc-options:          -W
  other-modules:        InterpreterTests
                      , ParserTests
  build-depends:        base >=4.7 && <5
                      , bytestring
                      , data-default
                      , defugger-internal
                      , hspec
                      , mtl
                      , text

test-suite debugger-tests
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  hs-source-dirs:       tests/Debugger
  default-language:     Haskell2010
  ghc-options:          -W
  other-modules:        BracketTests
                      , ExecuteTests
                      , TestUtilities
  build-depends:        base >=4.7 && <5
                      , brick
                      , bytestring
                      , containers
                      , data-default
                      , defugger-internal
                      , hspec
                      , mtl
                      , text
                      , vector
