name:                   defugger
version:                0.1.0.0
homepage:               https://github.com/MWRuszczycky/defugger#readme
license:                BSD3
license-file:           LICENSE
author:                 Mark W. Ruszczycky
maintainer:             mwruszczycky@gmail.com
copyright:              2019 Mark W. Ruszczycky
build-type:             Simple
cabal-version:          >=1.10
extra-source-files:     README.md

executable defugger
  hs-source-dirs:       app
  main-is:              Main.hs
  default-language:     Haskell2010
  ghc-options:          -O2 -threaded -W
  build-depends:        base >= 4.7 && < 5
                      , mtl
                      , defugger-internal

library defugger-internal
  exposed-modules:      Controller.CommandBindings
                      , Controller.KeyBindings
                      , Controller.Loader
                      , Controller.Router
                      , Controller.Settings
                      , Model.Debugger.Debugger
                      , Model.Debugger.Edit
                      , Model.Debugger.Execute
                      , Model.Debugger.Query
                      , Model.Debugger.Widgets
                      , Model.Debugger.State
                      , Model.CoreIO
                      , Model.Interpreter
                      , Model.Parser
                      , Model.Types
                      , Model.Utilities
                      , StartUp
                      , View.View
                      , View.Core
                      , View.Help
  hs-source-dirs:       src
  ghc-options:          -O2 -W
  build-depends:        base >=4.7 && <5
                      , async
                      , binary
                      , brick
                      , bytestring
                      , containers
                      , data-default
                      , mtl
                      , text
                      , unix
                      , vector
                      , vty

test-suite model-tests
  type:                 exitcode-stdio-1.0
  main-is:              ModelTest/Spec.hs
  hs-source-dirs:       tests
  default-language:     Haskell2010
  ghc-options:          -W
  other-modules:        ModelTest.DebuggerTest.BracketTests
                      , ModelTest.DebuggerTest.ExecuteTests
                      , ModelTest.DebuggerTest.StateTests
                      , ModelTest.DebuggerTest.Spec
                      , ModelTest.InterpreterTests
                      , ModelTest.ParserTests
                      , UtilitiesTest
  build-depends:        base >=4.7 && <5
                      , brick
                      , bytestring
                      , containers
                      , defugger-internal
                      , data-default
                      , directory
                      , hspec
                      , mtl
                      , text
                      , vector

test-suite controller-tests
  type:                 exitcode-stdio-1.0
  main-is:              ControllerTest/Spec.hs
  hs-source-dirs:       tests
  default-language:     Haskell2010
  ghc-options:          -W
  other-modules:        ControllerTest.CommandBindingsTest
                      , ControllerTest.MockRouter
                      , UtilitiesTest
  build-depends:        base >=4.7 && <5
                      , brick
                      , bytestring
                      , directory
                      , data-default
                      , defugger-internal
                      , hspec
                      , mtl
                      , text
